--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="picture">
+    <div class="picture-img">
         <img src="picture.jpg">
     </div>
+    <h3>Hidalanan Oliver</h3>
+    <h3>2nd year / IT-207</h3>
+    <h3>WEBSYS</h3>
+    <h3>BSIT</h3>
 </body>
 </html>
