--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="picture-img">
         <img src="picture.jpg">
     </div>
@@ -14,5 +15,6 @@
     <h3>2nd year / IT-207</h3>
     <h3>WEBSYS</h3>
     <h3>BSIT</h3>
+    <a href="portfolio.html">Portfolio</a>
 </body>
 </html>
